src/gui/preferences/settingsidsuggestionswidget.cpp
@@ -49,7 +49,7 @@ public:
         m_defaultFormatStringRow = -1;
 
         if (exampleBibTeXEntry.isNull()) {
-            static FileImporterBibTeX fileImporterBibTeX(this);
+            FileImporterBibTeX fileImporterBibTeX(this);
             File *file = fileImporterBibTeX.fromString(exampleBibTeXEntryString);
             if (file != nullptr) {
                 if (!file->isEmpty())
